# tree-sitter-delphi

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  Readme.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-delphi.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_delphi/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDelphi/: delphi.h
bindings/swift/TreeSitterDelphiTests/: TreeSitterDelphiTests.swift
src/: scanner.c
test/corpus/: comment.txt  definition.txt  expression.txt  literal.txt  statement.txt  top-level-statement.txt  type_declaration.txt  uses_clause.txt
